# pymuvera

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
docs/: generate_eigenbasis_error_plot.py  generate_readme_plots.py
src/pymuvera/: __init__.py  config.py  core.py  encoder.py
src/pymuvera/_internal/: calibration.py  params.py  sketch.py  validation.py
tests/: test_calibrated_eigenbasis.py  test_pymuvera.py
