[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "pymuvera"
version = "0.4.2"
description = "Fixed Dimensional Encodings for multi-vector retrieval (MUVERA) — Python port of Google's graph-mining implementation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Suneel Marthi" },
]
keywords = [
    "muvera",
    "multi-vector",
    "retrieval",
    "embeddings",
    "colbert",
    "colpali",
    "colqwen2",
    "simhash",
    "approximate-nearest-neighbor",
    "information-retrieval",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.10",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints",
    "furo",
    "matplotlib>=3.8",
]

[project.urls]
Homepage       = "https://github.com/smarthi/pymuvera"
Documentation  = "https://pymuvera.readthedocs.io"
Repository     = "https://github.com/smarthi/pymuvera"
"Bug Tracker"  = "https://github.com/smarthi/pymuvera/issues"
Changelog      = "https://github.com/smarthi/pymuvera/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatchling build config
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/pymuvera"]

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/tests",
    "/LICENSE",
    "/NOTICE",
    "/README.md",
    "/CHANGELOG.md",
]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -q"

[tool.coverage.run]
source = ["src/pymuvera"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
